# RepoMind

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: architecture.md  configuration.md  contributing.md  troubleshooting.md
scripts/: install.sh
src/: __init__.py
src/cli/: chat.py  install.py  main.py
src/config/: settings.py
src/embedder/: embed.py
src/indexer/: indexer.py
src/llm/: ollama.py
src/retriever/: pipeline.py  qdrant.py
src/utils/: display.py  safety.py  session.py  system.py
tests/: test_indexer.py  test_rag.py
