[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeocloud"
version = "0.1.4"
description = "Ask your codebase anything — locally, privately, powerfully"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Manish Sharma", email = "mdashsharma95@gmail.com" }]
keywords = ["ai", "cli", "rag", "codebase", "ollama", "local-ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "pathspec>=0.12.1",
    "pydantic>=2.7.0",
    "tiktoken>=0.7.0",
]

[project.urls]
Homepage  = "https://github.com/manishdashsharma/Zeocloud"
Repository = "https://github.com/manishdashsharma/Zeocloud"
Issues    = "https://github.com/manishdashsharma/Zeocloud/issues"

[project.scripts]
zeocloud = "zeocloud.cli.main:app"

[tool.setuptools]
package-dir = { "zeocloud" = "src" }
packages    = [
    "zeocloud",
    "zeocloud.cli",
    "zeocloud.config",
    "zeocloud.llm",
    "zeocloud.embedder",
    "zeocloud.indexer",
    "zeocloud.retriever",
    "zeocloud.utils",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-psutil>=5.9.0",
]

[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["zeocloud"]

[tool.mypy]
python_version     = "3.11"
strict             = true
ignore_missing_imports = true
exclude            = ["tests/"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
